# train-ute

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.command  run_with_terminal.command  setup.command
.github/workflows/: build-test-and-upload.yml
patronage_data_processing/: Cargo.toml
patronage_data_processing/src/: main.rs
train-ui/: .prettierrc  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
train-ui/src/: app.html  main.ts  style.css
train-ui/src-tauri/: Cargo.toml  tauri.conf.json
train-ui/src-tauri/capabilities/: main.json
train-ui/src-tauri/src/: lib.rs  main.rs
train-ui/src/lib/: Button.svelte  ConfigPanel.svelte  CrowdingModelSelector.svelte  Visualisation.svelte  deckgl_buffers.ts  utilities.ts
train-ui/src/lib/components/: Button.svelte  ConfigPanel.svelte  Visualisation.svelte
train-ui/src/routes/: +layout.svelte  +page.svelte  style.css
train-ute/: Cargo.toml
train-ute/benches/: train_ute_melbourne.rs
train-ute/examples/: run_thesis_benchmarks.rs  train_ute_melbourne.rs
train-ute/src/: colour.rs  data_export.rs  data_import.rs  lib.rs  main.rs  myki.rs  simulation.rs  simulationv2.rs  utils.rs
