[workspace]
resolver = "2"
members = [
    "raptor-rs", 
    "patronage_data_processing",
    "train-ute",
    "train-ui/src-tauri",
]

# Compile dependencies as release even in debug mode.
[profile.dev.package."*"]
opt-level = 3

[profile.release-with-symbols]
inherits = "release"
debug = true

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
