[package]
name = "train-ute"
version = "0.1.0"
edition = "2021"

[dependencies]
raptor-rs = { path = "../raptor-rs" }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
gtfs-structures = { version = "0.41.2", default-features = false }
parquet = { version = "52.0.0" }
arrow = { version = "52.0.0", default-features = false }
thiserror = "1.0.60"
bytemuck = { version = "1.16.1", features = ["must_cast"] }
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "getrandom"] }
rgb = { version = "0.8.37", default-features = false }
rayon = "1.10.0"
itertools = "0.13.0"
csv = "1.3.0"
kdam = { version = "0.5.2", features = ["rayon"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
