[package]
name = "train-ute"
version = "0.8.0"
edition = "2021"

[[bench]]
name = "train_ute_melbourne"
harness = false

[features]
progress_bar = ["kdam"]
serde = ["serde/derive"]

[dependencies]
raptor-rs = { path = "../raptor-rs" }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
serde = { version = "1.0.130", default-features = false, optional = true}
gtfs-structures = { version = "0.42.0", default-features = false }
parquet = { version = "53.0.0", default-features = false, features = ["arrow", "snap"] }
arrow = { version = "53.0.0", default-features = false }
thiserror = "2.0.0"
bytemuck = { version = "1.16.1", features = ["must_cast"] }
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "getrandom"] }
rgb = { version = "0.8.37", default-features = false }
rayon = "1.10.0"
itertools = "0.13.0"
csv = "1.3.0"
kdam = { version = "0.5.2", features = ["rayon"], optional = true }
either = "1.13.0"
log = "0.4.22"
# datafusion = { version = "42.0.0", default-features = false, features = ["parquet"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dev_utils = { path = "../raptor-rs/dev_utils" }
