[package]
name = "train-ui"
version = "0.1.0"
description = "Train Ute Model"
authors = ["Ben Sutherland"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.10", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.11", features = [] }
train-ute = { path = "../../train-ute" }
raptor-rs = { path = "../../raptor-rs" }
tauri-plugin-fs = "2.0.0-rc.4"
tauri-plugin-dialog = "2.0.0-rc"
# log = "0.4.22"

gtfs-structures = { version = "^0.41.2", default-features = false }
chrono = { version = "^0.4.38", default-features = false }
thiserror = "1.0.61"
