[package]
name = "train-ui"
version = "0.8.0"
description = "Train Ute Model"
authors = ["Ben Sutherland"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
train-ute = { path = "../../train-ute", features = ["progress_bar", "serde"] }
raptor-rs = { path = "../../raptor-rs" }
tauri-plugin-dialog = "2.0.0-rc"
parquet = { version = "53.0.0" }
arrow = { version = "53.0.0", default-features = false }
gtfs-structures = { version = "0.42.0", default-features = false }
chrono = { version = "0.4.38", default-features = false }
thiserror = "2.0.0"
log = "0.4.22"
env_logger = "0.11.5"
